--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -12,6 +12,8 @@
     "Confirm Password": "パスワード(確認用)",
     "Remember Me": "ログイン状態を保存",
 
+    "Download the Excel DataLink file.": "Excel DataLink ファイルをダウンロードできます",
+    "Download": "ダウンロード",
     "This application is a sample. Let's register and try it out first.": "このアプリはサンプルです。まずは登録して使ってみましょう。",
     "This is a web system that can link data with Excel.": "Excel とデータ連携できるWebシステムです。",
     "Confirm unsubscribe": "退会の確認",
